using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Shared
{
    public static class Axes
    {
        public const string Vertical = "Vertical";
        public const string Horizontal = "Horizontal";
    }

    public static class Tags
    {
        public const string Ground = "Ground";
        public const string Player = "Player";
        public const string Spike = "Spike";
    }

    public static class AnimatorTags
    {
        public const string Walk = "Walk";
        public const string Jump = "Jump";
        public const string Crouch = "Crouch";
    }
}
